--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "./js/src/Reaction",
   "dependencies": {
     "define": "aleclarson/define#1.0.0",
+    "emptyFunction": "aleclarson/emptyFunction#1.0.0",
+    "factory": "aleclarson/factory#1.0.0",
     "immutable": "^3.7.5",
     "io": "aleclarson/io#1.0.0",
     "lotus-log": "aleclarson/lotus-log#1.0.0",
-    "named-function": "aleclarson/named-function#1.0.3",
+    "lotus-require": "aleclarson/lotus-require#1.0.0",
     "reactive-var": "aleclarson/reactive-var#1.0.6",
-    "steal": "aleclarson/steal#0.0.1",
     "tracker": "aleclarson/tracker#1.0.8",
     "type-utils": "aleclarson/type-utils#1.0.0"
   }
