--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "1.0.0",
   "main": "./js/src/Reaction",
   "dependencies": {
-    "define": "aleclarson/define#1.0.0",
     "emptyFunction": "aleclarson/emptyFunction#1.0.0",
+    "event": "aleclarson/event#1.0.0",
+    "factory": "aleclarson/factory#1.0.0",
     "injector": "aleclarson/injector#1.0.0",
-    "lotus-require": "aleclarson/lotus-require#1.0.0",
-    "named-function": "aleclarson/named-function#1.0.3",
+    "isDev": "aleclarson/isDev#1.0.0",
+    "tracer": "aleclarson/tracer#1.0.0",
     "tracker": "aleclarson/tracker#1.0.8",
     "type-utils": "aleclarson/type-utils#1.0.0"
+  },
+  "lotus": {
+    "plugins": [
+      "lotus-coffee"
+    ]
   }
 }
