--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "2.0.0",
   "main": "js/src/Reaction",
   "dependencies": {
+    "Injectable": "aleclarson/Injectable#1.0.0",
+    "Type": "aleclarson/Type#1.0.0",
+    "assert": "aleclarson/assert#1.0.0",
     "emptyFunction": "aleclarson/emptyFunction#1.0.0",
     "event": "aleclarson/event#2.0.0",
     "isDev": "aleclarson/isDev#1.0.0",
     "tracer": "aleclarson/tracer#1.0.0",
-    "tracker": "aleclarson/tracker#2.0.0",
-    "type-utils": "aleclarson/type-utils#1.0.0",
-    "Injectable": "aleclarson/Injectable#1.0.0",
-    "Type": "aleclarson/Type#1.0.0"
+    "tracker": "aleclarson/tracker#2.0.0"
   },
   "lotus": {
     "plugins": [
