--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "reaction",
-  "version": "2.0.0",
+  "name": "Reaction",
+  "version": "1.0.0",
   "main": "js/src/Reaction",
   "dependencies": {
+    "Event": "aleclarson/Event#2.0.0",
     "Type": "aleclarson/Type#1.0.0",
     "assert": "aleclarson/assert#1.0.0",
     "emptyFunction": "aleclarson/emptyFunction#1.0.0",
-    "event": "aleclarson/event#2.0.0",
     "getArgProp": "aleclarson/getArgProp#1.0.0",
     "isDev": "aleclarson/isDev#1.0.0",
     "tracer": "aleclarson/tracer#1.0.0",
