--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "Type": "aleclarson/Type#1.0.0",
     "assert": "aleclarson/assert#1.0.0",
     "emptyFunction": "aleclarson/emptyFunction#1.0.0",
-    "getArgProp": "aleclarson/getArgProp#1.0.0",
+    "fromArgs": "aleclarson/fromArgs#1.0.0",
     "tracker": "aleclarson/tracker#2.0.0"
   },
   "lotus": {
