--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Reaction",
   "version": "1.0.0",
-  "main": "js/src/Reaction",
+  "main": "js/Reaction",
   "dependencies": {
     "Event": "aleclarson/Event#2.0.0",
     "Type": "aleclarson/Type#1.0.0",
