--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "Event": "aleclarson/Event#2.0.1",
     "Type": "aleclarson/Type#1.1.0",
+    "bind": "aleclarson/bind#1.0.0",
     "emptyFunction": "aleclarson/emptyFunction#1.0.0",
+    "isType": "aleclarson/isType#1.0.0",
     "tracker": "aleclarson/tracker#2.0.0"
   },
   "devDependencies": {
