--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "Reaction",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "js/Reaction",
-  "lotus": {
-    "plugins": [
-      "lotus-coffee"
-    ]
+  "plugins": [
+    "lotus-coffee"
+  ],
+  "scripts": {
+    "build": "coffee-build -v 1.11.x -b -o js src",
+    "postinstall": "npm run build"
   },
   "dependencies": {
-    "Event": "aleclarson/Event#2.0.1",
-    "Type": "aleclarson/Type#1.1.0",
-    "assert": "aleclarson/assert#1.0.0",
-    "emptyFunction": "aleclarson/emptyFunction#1.0.0",
-    "fromArgs": "aleclarson/fromArgs#1.0.0",
-    "tracker": "aleclarson/tracker#2.0.0"
+    "Event": "aleclarson/Event#2.1.0",
+    "Type": "aleclarson/Type#2.1.0",
+    "isType": "aleclarson/isType#1.0.1",
+    "tracker": "aleclarson/tracker#2.1.0"
   },
   "devDependencies": {
     "ReactiveVar": "aleclarson/ReactiveVar#2.0.0"
