--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "postinstall": "npm run build"
   },
   "dependencies": {
-    "Event": "aleclarson/Event#3.2.1",
     "Type": "aleclarson/Type#2.3.1",
+    "eve": "aleclarson/eve#1.1.0",
     "isType": "aleclarson/isType#1.0.1",
     "tracker": "aleclarson/tracker#2.2.0"
   },
