--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Reaction",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "main": "js/Reaction",
   "plugins": [
     "lotus-coffee"
@@ -10,10 +10,10 @@
     "postinstall": "npm run build"
   },
   "dependencies": {
-    "Event": "aleclarson/Event#3.1.2",
-    "Type": "aleclarson/Type#2.2.0",
+    "Type": "aleclarson/Type#2.3.1",
+    "eve": "aleclarson/eve#1.1.0",
     "isType": "aleclarson/isType#1.0.1",
-    "tracker": "aleclarson/tracker#2.1.1"
+    "tracker": "aleclarson/tracker#2.2.0"
   },
   "devDependencies": {
     "ReactiveVar": "aleclarson/ReactiveVar#2.0.0"
